Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122230

Broken links in qtdeclarative docs

    XMLWordPrintable

Details

    • All
    • cb714b1f7 (dev), 7ed4fa0a5 (6.7), c901e6fc9 (6.7.0)
    • DaVinci 94

    Description

      Fix the following broken links:

      • qt5/qtdeclarative/src/quick/items/qquickitem.cpp:7974: (qdoc) warning: Can't link to 'QuickControl'
      • qt5/qtdeclarative/src/quick/items/qquickrhiitem.cpp:908: (qdoc) warning: Can't link to 'QQuickRhiItem::autoRenderTarget'
      • qt5/qtdeclarative/src/quick/items/qquickrhiitem.cpp:996: (qdoc) warning: Can't link to 'QQuickRhiItem::autoRenderTarget'
      • qt5/qtdeclarative/src/quick/items/qquickrhiitem.cpp:1079: (qdoc) warning: Can't link to 'QQuickRhiItem::autoRenderTarget'
      • qt5/qtdeclarative/src/quick/items/qquickrhiitem.cpp:1085: (qdoc) warning: Can't link to 'QQuickRhiItem::autoRenderTarget'
      • qt5/qtdeclarative/src/quick/items/qquickrhiitem.cpp:937: (qdoc) warning: Can't link to 'QQuickRhiItem::autoRenderTarget'
      • qt5/qtdeclarative/src/quick/items/qquickrhiitem.cpp:1014: (qdoc) warning: Can't link to 'QQuickRhiItem::autoRenderTarget'
      • qt5/qtdeclarative/src/quick/items/qquickrhiitem.cpp:979: (qdoc) warning: Can't link to 'QQuickRhiItem::autoRenderTarget'
      • qt5/qtdeclarative/examples/quick/quickshapes/weatherforecast/doc/src/weatherforecast.qdoc:13: (qdoc) warning: Can't link to 'Qt Quick Shapes'
      • qt5/qtdeclarative/examples/quick/quickshapes/weatherforecast/doc/src/weatherforecast.qdoc:21: (qdoc) warning: Can't link to 'Qt Quick Shapes'
      • qt5/qtdeclarative/examples/quick/quickshapes/weatherforecast/doc/src/weatherforecast.qdoc:27: (qdoc) warning: Can't link to 'Qt Quick Shapes'
      • qt5/qtdeclarative/examples/quick/quickshapes/weatherforecast/doc/src/weatherforecast.qdoc:45: (qdoc) warning: Can't link to 'Qt Quick Shapes'
      • qt5/qtdeclarative/examples/quick/quickshapes/weatherforecast/doc/src/weatherforecast.qdoc:78: (qdoc) warning: Can't link to 'Qt Quick Shapes'
      • qt5/qtdeclarative/examples/quick/quickshapes/weatherforecast/doc/src/weatherforecast.qdoc:83: (qdoc) warning: Can't link to 'Qt Quick Shapes'
      • qt5/qtdeclarative/examples/quick/quickshapes/weatherforecast/doc/src/weatherforecast.qdoc:93: (qdoc) warning: Can't link to 'Qt Quick Shapes'
      • qt5/qtdeclarative/examples/quick/quickshapes/weatherforecast/doc/src/weatherforecast.qdoc:102: (qdoc) warning: Can't link to 'Qt Quick Shapes'
      • qt5/qtdeclarative/examples/quick/quickshapes/weatherforecast/doc/src/weatherforecast.qdoc:105: (qdoc) warning: Can't link to 'Qt Quick Shapes'
      • qt5/qtdeclarative/src/quick/items/context2d/qquickcontext2d.cpp:3412: (qdoc) warning: Undocumented parameter 'imageData' in Context2D::createImageData()
      • qt5/qtdeclarative/src/quick/items/qquickitem.cpp:7966: (qdoc) warning: Can't link to 'QQuickControl'
      • qt5/qtdeclarative/src/quick/items/qquicktableview.cpp:1230: (qdoc) warning: Undocumented parameter 'cell' in TableView::modelIndex()

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            veshivas Venugopal Shivashankar
            veshivas Venugopal Shivashankar
            Topi Reiniƶ Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change