Doc: Fix broken link

Fixed the following qdoc warnings:

- src/quick/items/qquickitem.cpp:[7966,7974]: (qdoc) warning: Can't link to 'QQuickControl'
- src/quick/items/context2d/qquickcontext2d.cpp:3412: (qdoc) warning: Undocumented parameter 'imageData' in Context2D::createImageData()
- src/quick/items/qquicktableview.cpp:1230: (qdoc) warning: Undocumented parameter 'cell' in TableView::modelIndex()
- examples/quick/quickshapes/weatherforecast/doc/src/weatherforecast.qdoc:[13,21,27,45,78,83,93,102,105]: (qdoc) warning: Can't link to 'Qt Quick Shapes'

Fixes: QTBUG-122230
Change-Id: I4f533ed95c13a99d649568d7b773437712b5b2d1
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
(cherry picked from commit cb714b1f749389f9fd4dcf2ad53056f99dd3c3a1)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 7ed4fa0a5fd79afafab3ced20545e384595cee73)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>