src/quick/items/qquickitem.cpp
@@ -7963,7 +7963,7 @@ QQuickItem *QQuickItem::scopedFocusItem() const
     \value Qt.WheelFocus  The item accepts focus by tabbing, clicking, and using the mouse wheel.
     \value Qt.NoFocus     The item does not accept focus.
 
-    \note This property was a member of \l {QQuickControl} {Control} until Qt 6.7.
+    \note This property was a member of the \l[QML]{Control} QML type in Qt 6.6 and earlier.
 */
 /*!
     \property QQuickItem::focusPolicy
@@ -7971,7 +7971,6 @@ QQuickItem *QQuickItem::scopedFocusItem() const
 
     This property determines the way the item accepts focus.
 
-    \note This property was a member of \l {QQuickControl} {Control} until Qt 6.7.
 */
 Qt::FocusPolicy QQuickItem::focusPolicy() const
 {
