src/quick/items/qquicktableview.cpp
@@ -1236,7 +1236,7 @@
     modelIndex(cell.y, cell.x)
     \endcode
 
-    A cell is simply a \l point that combines row and column into
+    A \a cell is simply a \l point that combines row and column into
     a single type.
 
     \note \c {point.x} will map to the column, and \c {point.y} will map to the row.
